exports[`format : basic 1`] = `<template>
  <p>This is BasicFormat</p>
</template>

<script>
export default {
  name: 'BasicFormat'
}
</script>

<style scoped>
#app {
  color: red;
}
</style>

<i18n lang="json">
{
  "en": {
    "title": "The application"
  },
  "ja": {
    "title": "アプリケーション"
  }
}
</i18n>
`;

exports[`format : nested 1`] = `<template>
  <p>This is Nested resources</p>
</template>

<script>
export default {
  name: 'App'
}
</script>

<i18n lang="json" global>
{
  "en": {
    "footer": "this is footer placeholder",
    "menu": {
      "sub1": {
        "menu1": "menu 1",
        "menu2": {
          "1menu": "this is sub 1menu",
          "menu1": "this is sub menu1",
          "menu2": "this is sub menu2"
        }
      },
      "sub2": "this is sub2 placeholder",
      "sub3": "this is sub3 placeholder",
      "sub4": {
        "0menu": "this is sub 0menu",
        "menu1": {
          "menu1": "this is sub menu1",
          "menu2": "this is sub menu2"
        },
        "menu10": "menu 10"
      }
    },
    "title": "The application"
  }
}
</i18n>

<style scoped>
#app {
  color: red;
}
</style>
`;

exports[`format : oneline 1`] = `<template>
  <p>This is Oneline</p>
</template>

<script>
export default { name: 'App' }
</script>

<style scoped>
#app { color: red; }
</style>

<i18n lang="json">
{
  "en": {
    "title": "The application"
  }
}
</i18n>`;

exports[`format : multi 1`] = `<template>
  <p>This is MultiFormat</p>
</template>

<i18n lang="json">
{
  "en": {
    "title": "The application"
  },
  "ja": {
    "title": "アプリケーション"
  }
}
</i18n>

<script>
export default {
  name: 'MultiFormat'
}
</script>

<i18n lang="yaml">
en:
  login: "login"
ja:
  login: "ログイン"
</i18n>

<style scoped>
#app {
  color: red;
}
</style>

<i18n lang="json5">
{
  en: { login: "login" },
  ja: {
    login: "ログイン",
  },
}
</i18n>
`;

